Added linkedin and github profiles to sidebar

--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -94,6 +94,29 @@
                 color:#ffd700;
             }
         }
+    }
 
+    ul{
+        position: absolute;
+        bottom: 50px;
+        width: 100%;
+        display: block;
+        padding: 0;
+        list-style: none;
+        text-align: center;
+        margin: 0;
+
+        li{
+            a{
+                padding: 7px 0;
+                display: block;
+                font-size: 22px;
+                line-height: 16px;
+
+                &:hover svg{
+                    color: #ffd700;
+                }
+            }
+        }
     }
 }
