--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -16,7 +16,7 @@
     bottom: 0;
     left: 120px;
     font-size: 18px;
-    font-family: 'La Belle Aurore';
+    font-family: 'La Belle Aurore', cursive;
  }
 
  .bottom-tag-html {
@@ -25,8 +25,8 @@
 
  .container {
    width: 100%;
-   height: 90%;
    will-change: contents;
+   height: 90%;
    min-height: 566px;
    position: absolute;
    opacity: 0;
